--- a/boot.html
+++ b/boot.html
@@ -20,7 +20,7 @@
                 <div class="col-md-5">
                     <a class="btn btn-dark" href="/HTML/index.html">Sei la 1</a>
                     <a class="btn btn-dark" href="/HTML/index.html">Sei la 2</a>
-                    <a class="btn btn-danger" href="/HTML/index.html">METFLIX</a>
+                    <a class="btn btn-danger" href="index.html">METFLIX</a>
                 </div>
             </div>
         </div>
