--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 
         <nav>
           <h2 class="h3">
-            <a href="/HTML/boot.html">Português BR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle-fill" viewBox="0 0 16 16">
+            <a href="boot.html">Português BR<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-1-circle-fill" viewBox="0 0 16 16">
               <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312z"/>
             </svg></a>
           </h2>
           <h2 class="h2">
-            <a href="/HTML/index.html">Entrar</a>
+            <a href="index.html">Entrar</a>
           </h2>
 
         </nav>
