--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <a href="#">Trabalhe conosco</a>
       <a href="#">Central de ajuda</a>
       <a href="#">Privacidade</a>
-      <a href="#">LinkTree</a>      
+      <a href="LinkTree.html">LinkTree</a>      
     </footer>
  
   </body>
